feat(mathlive-demo-video)

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@ read_time: false
 <section id="mathfield" class="fullwidth bg-black">
   <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
   <div class="figure">
-    <img src="/assets/bg/blue-on-light.jpg">
+    <video autoplay loop muted playinline class='max-w-lg'>
+      <source src="/assets/videos/mathlive-demo.webm" type="video/webm">
+      <source src="/assets/videos/mathlive-demo.mp4" type="video/mp4">
+      <img src="assets/images/mathfield/mathlive-demo.png">
+    </video>
   </div>
   <div class="copy">
     <h2><span class='eyebrow'>MathLive</span>Math Input Made Easy</h2>
