Improved API documentation generation

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -6,7 +6,16 @@ layout: single
 ---
 <section>
 <h1 class="font-size-2xl">About Us</h1>
-<div class='max-w-sm'>
+<div class='hero-container'>
+<h2>Arno Gourdol</h2>
+<picture class='hero'>
+  <source srcset="../assets/images/arno-cover_2x.jpg" media="only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 1.5dppx), (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi)">
+  <img src="../assets/images/arno-cover.jpg" alt="Portrait of Arno">
+</picture>
+</div>
+
+<div class='max-w-4xl mt-lg'>
+
 <p>Hi!</p>
 <p> I’m Arno and I’ve always been interested in typography and in math as a
      language. At the intersection of science and art, I have crafted MathLive: 
@@ -26,8 +35,11 @@ You can find out more in the MathLive Usage Guide.</p>
 <p>I can’t wait to see what you will do with it. Enjoy!</p>
 
 
-<img class='avatar-lg'src='../assets/images/arno.jpg'><p>—Arno<br>
-<a href='mailto:arno@arno.org'>arno@arno.org</a></p>
+<p>—Arno<br>
+<a href='https://www.linkedin.com/in/arnog'><i class="fab fa-linkedin"></i></a>
+<a href='https://www.instagram.com/arnog'><i class="fab fa-instagram"></i></a>
+<a href='mailto:arno@cortexjs.io'><i class="far fa-envelope"></i></i></a>
+</p>
 
 </div>
 
