Updated Let's Get Started

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -8,43 +8,46 @@ layout: wide
 
 <section class='w-full bg-alternate'>
 
-<section class='cards col1 max-w-xl m-auto mb-xl'>
-  <h2 class='font-size-2xl text-center'>MathLive Documentation</h2>
-  <div class="card primary" >
-    <a class="section-link" href="/docs/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
-    <div class="ml-lg mr-lg">
-      <i class="fa-4x fad fa-pencil"></i>
+  <section class='cards col1 max-w-xl m-auto mb-xl'>
+    <h2 class='font-size-2xl text-center'>MathLive Documentation</h2>
+    <div class="card primary">
+      <a class="section-link" href="/docs/mathlive/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-pencil"></i>
+      </div>
+      <div class="copy">
+        <h3>MathLive SDK</h3>
+        <p>Reference documentation of the MathLive API</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
     </div>
-    <div class="copy">
-        <h3>Mathlive API</h3>
-        <p>Reference documentation of the Mathlive API</p>
-    </div>
-    <i class="fa-3x fal fa-chevron-right navigation"></i>
-  </div>
 
-  <div class="card" >
-    <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
-    <div class="ml-lg mr-lg">
-      <i class="fa-4x fad fa-rocket"></i>
-    </div>
-    <div class="copy">
+    <div class="card">
+      <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-rocket"></i>
+      </div>
+      <div class="copy">
         <h3>Getting Started</h3>
         <p>Everything you need to know to add a mathfield to your project</p>
-    </div>
-    <i class="fa-3x fal fa-chevron-right navigation"></i>
-</section>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+  </section>
 
 </section>
 
 <section class='max-w-lg w-full'>
-<h2 class='font-size-2xl text-center'>Other Documentation</h2>
+  <h2 class='font-size-2xl text-center'>Other Documentation</h2>
 </section>
 
 
 <section class="cards wrap-vertical">
 
   <div class="card">
-    <a class="section-link" href="/docs/code-of-conduct/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
+    <a class="section-link" href="/docs/code-of-conduct/" target="_self" rel="follow" aria-hidden="true"
+      tabindex="-1">&nbsp;</a>
     <div class="icon-secondary">
       <i class="fa-4x fal fa-file-alt"></i>
     </div>
@@ -56,7 +59,8 @@ layout: wide
   </div>
 
   <div class="card">
-    <a class="section-link" href="/docs/reporting-issues/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
+    <a class="section-link" href="/docs/reporting-issues/" target="_self" rel="follow" aria-hidden="true"
+      tabindex="-1">&nbsp;</a>
     <div class="icon-secondary">
       <i class="fa-4x fal fa-file-alt"></i>
     </div>
@@ -68,7 +72,8 @@ layout: wide
   </div>
 
   <div class="card">
-    <a class="section-link" href="/docs/contributing-code/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
+    <a class="section-link" href="/docs/contributing-code/" target="_self" rel="follow" aria-hidden="true"
+      tabindex="-1">&nbsp;</a>
     <div class="icon-secondary">
       <i class="fa-4x fal fa-file-alt"></i>
     </div>
@@ -80,7 +85,8 @@ layout: wide
   </div>
 
   <div class="card">
-    <a class="section-link" href="/docs/coding-style-guide/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
+    <a class="section-link" href="/docs/coding-style-guide/" target="_self" rel="follow" aria-hidden="true"
+      tabindex="-1">&nbsp;</a>
     <div class="icon-secondary">
       <i class="fa-4x fal fa-file-alt"></i>
     </div>
