--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -4,16 +4,14 @@ title: MathLive
 permalink: /mathlive/
 read_time: false
 head:
-  stylesheets:
-    - https://unpkg.com/mathlive/dist/mathlive.core.css
-    - https://unpkg.com/mathlive/dist/mathlive.css
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.css
-    - ../assets/css/live-code.css
-  scripts:
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.js
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/mode/javascript/javascript.min.js
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/mode/xml/xml.min.js
-    - ../assets/js/live-code.js
+stylesheets:
+- https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.css
+- ../assets/css/live-code.css
+scripts:
+- https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.js
+- https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/mode/javascript/javascript.min.js
+- https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/mode/xml/xml.min.js
+- ../assets/js/live-code.js
 ---
 <section class="hero-section">
   <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
@@ -25,20 +23,20 @@ head:
 <section class='mb-xl bg-alternate w-full'>
   {% live-code %}
   {% code-tab "Javascript" %}
-<!-- htmlmin:ignore -->
-import MathLive from 
-  'https://unpkg.com/mathlive/dist/mathlive.mjs';
-MathLive.makeMathField(
+  <!-- htmlmin:ignore -->
+  import MathLive from
+  'https://unpkg.com/mathlive/dist/mathlive.min.mjs';
+  MathLive.makeMathField(
   document.querySelector('.mathfield')
-);
-<!-- htmlmin:ignore -->
+  );
+  <!-- htmlmin:ignore -->
   {% endcode-tab %}
   {% code-tab "HTML" %}
-<!-- htmlmin:ignore -->
-<div class="mathfield">
-  x=\frac{-b\pm \sqrt{b^2-4ac}}{2a}
-</div>
-<!-- htmlmin:ignore -->
+  <!-- htmlmin:ignore -->
+  <div class="mathfield">
+    x=\frac{-b\pm \sqrt{b^2-4ac}}{2a}
+  </div>
+  <!-- htmlmin:ignore -->
   {% endcode-tab %}
   {% endlive-code %}
 </section>
@@ -47,87 +45,94 @@ MathLive.makeMathField(
 <img src='/assets/images/mathfield/screenshot.jpg'>
 
 <section>
-    <section class="fullwidth">
-      <div class='copy'>
-    <h2>TeX Quality Typesetting</h2>
-        <p>TeX is the gold standard for typesetting of mathematical content. </p><p>
-        Mathlive provides a Javascript implementation that faithfully reproduces the output of TeX.</p>
-      </div>
-      <div class="figure">
-        <img src='/assets/images/mathfield/loop-eqn.png'>
-      </div>
-    </section>
+  <section class="fullwidth">
+    <div class='copy'>
+      <h2>TeX Quality Typesetting</h2>
+      <p>TeX is the gold standard for typesetting of mathematical content. </p>
+      <p>
+        MathLive provides a Javascript implementation that faithfully reproduces the output of TeX.</p>
+    </div>
+    <div class="figure">
+      <img src='/assets/images/mathfield/loop-eqn.png'>
+    </div>
+  </section>
 
-    <section class="fullwidth bg-alternate">
-      <div class='figure'>
-        <i class="fa-10x fad fa-universal-access"></i>
-      </div>
-      <div class='copy'>
-        <h2>Anywhere. For Anyone.</h2>
-        <p>Mathlive works with screenreaders and include a custom text to speech engine.</p>
-        <p>On screen virtual keyboards are also available to make input easy, even on mobile devices.</p>
-      </div>
-    </section>
+  <section class="fullwidth bg-alternate">
+    <div class='figure'>
+      <i class="fa-10x fad fa-universal-access"></i>
+    </div>
+    <div class='copy'>
+      <h2>Anywhere. For Anyone.</h2>
+      <p>MathLive works with screenreaders and include a custom text to speech engine.</p>
+      <p>On screen virtual keyboards are also available to make input easy, even on mobile devices.</p>
+    </div>
+  </section>
 
-    <section class="fullwidth">
-      <div class='copy'>
-        <h2>Customizable</h2>
-        <p>You can paste in MathASCII or Latex, and get back those formats or an easy to parse MathJSON object representing an Abstract Syntax Tree of the formula.</p>
-        <p>A comprehensive API is available and many options are customizable, from you own dictionary of Latex macros, custom inline shortcuts, custom virtual keyboards and more.</p>
-      </div>
-      <div class="figure">
-        <img src='/assets/images/mathfield/virtualKeyboard.png'>
-      </div>
+  <section class="fullwidth">
+    <div class='copy'>
+      <h2>Customizable</h2>
+      <p>You can paste in MathASCII or Latex, and get back those formats or an easy to parse MathJSON object
+        representing an Abstract Syntax Tree of the formula.</p>
+      <p>A comprehensive API is available and many options are customizable, from you own dictionary of Latex macros,
+        custom inline shortcuts, custom virtual keyboards and more.</p>
+    </div>
+    <div class="figure">
+      <img src='/assets/images/mathfield/virtualKeyboard.png'>
+    </div>
   </section>
 
 </section>
 
 <section class='cards col2'>
-    <section class="card">
-      <div class='copy'>
-    <h2>Intuitive Editing</h2>
-        <p>Type an equation: use the keyboard to type symbols, arrow keys to navigate.<p>
-          <p>When done, select the equation, and copy the LaTeX code to another app.</p>
-      </div>
-      <div class="figure">
-        <img src='/assets/images/mathfield/quadratic.gif'>
-      </div>
-    </section>
+  <section class="card">
+    <div class='copy'>
+      <h2>Intuitive Editing</h2>
+      <p>Type an equation: use the keyboard to type symbols, arrow keys to navigate.
+      <p>
+      <p>When done, select the equation, and copy the LaTeX code to another app.</p>
+    </div>
+    <div class="figure">
+      <img src='/assets/images/mathfield/quadratic.gif'>
+    </div>
+  </section>
 
-    <section class="card">
-      <div class='copy'>
-    <h2>Inline Shortcuts</h2>
-        <p>Some symbols get converted automatically. Type <kbd>p</kbd><kbd>i</kbd> and it becomes π.</p>
-      </div>
-      <div class="figure">
-        <img src='/assets/images/mathfield/euler.gif'>
-      </div>
-    </section>
+  <section class="card">
+    <div class='copy'>
+      <h2>Inline Shortcuts</h2>
+      <p>Some symbols get converted automatically. Type <kbd>p</kbd><kbd>i</kbd> and it becomes π.</p>
+    </div>
+    <div class="figure">
+      <img src='/assets/images/mathfield/euler.gif'>
+    </div>
+  </section>
 
 
 </section>
 
 <section class='cards secondary'>
   <div class="card">
-  <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
+    <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true"
+      tabindex="-1">&nbsp;</a>
     <div class="icon-secondary">
       <i class="fa-2x fad fa-rocket"></i>
     </div>
     <div class="copy">
       <h3>Getting Started</h3>
       <p>Everything you need to know to add a mathfield to your project</p>
-      <a href="/guides/mathfield-getting-started/">Read Documentation<i class="fa fal fa-chevron-right navigation"></i></a>
+      <a href="/guides/mathfield-getting-started/">Read Documentation<i
+          class="fa fal fa-chevron-right navigation"></i></a>
     </div>
   </div>
-  
+
   <div class="card">
-  <a class="section-link" href="/docs/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
+    <a class="section-link" href="/docs/mathlive/" target="_self" rel="follow" aria-hidden="true"
+      tabindex="-1">&nbsp;</a>
     <div class="icon-secondary">
       <i class="fa-2x fad fa-pencil"></i>
     </div>
     <div class="copy">
-      <h3>MathLive API</h3>
-      <p>Reference documentation of the Mathlive API</p>
+      <h3>MathLive SDK</h3>
+      <p>Reference documentation of the MathLive API</p>
       <a href="/docs/mathlive/">Read Documentation<i class="fa fal fa-chevron-right navigation"></i></a>
     </div>
   </div>
