Update for Mathlive 0.57

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -36,6 +36,23 @@ layout: wide
       <i class="fa-3x fal fa-chevron-right navigation"></i>
   </section>
 
+  <section class='cards col1 max-w-xl m-auto mb-xl'>
+    <h2 class='font-size-2xl text-center'>MathJSON Documentation</h2>
+    <div class="card primary">
+      <a class="section-link" href="/guides/math-json/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-pencil"></i>
+      </div>
+      <div class="copy">
+        <h3>MathJSON introduction</h3>
+        <p>Spec for the MathJSON format</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
+  </section>
+
+
 </section>
 
 <section class='max-w-lg w-full'>
