--- a/src/index.html
+++ b/src/index.html
@@ -27,38 +27,41 @@ read_time: false
 </section>
 
 <div class='cards col3'>
-<section id="mathjson" class="card">
-<div class="copy">
-  <h2><span class='eyebrow'>MathJSON</span>The Web Native Format for Formulas</h2>
-  <h3>A JSON schema to make it easier to exchange math formulas.</h3>
-  <p><strong>Coming soon.</strong></p>
-</div>
-<div class="figure">
-  <img src="/assets/bg/blue-on-light.jpg">
-</div>
-</section>
+  <section id="mathjson" class="card">
+    <div class="copy">
+      <h2><span class='eyebrow'>MathJSON</span>The Web Native Format for Formulas</h2>
+      <h3>A JSON schema to represent math formulas.</h3>
 
-<section id="mathjson" class="card">
-<div class="copy">
-  <h2><span class='eyebrow'>Compute Engine</span>Turbo Formula Evaluator</h2>
-  <h3>The Compute Engine uses an optimizing compiler to quickly evaluate math formulas.</h3>
-  <p><strong>Coming soon.</strong></p>
-</div>
-<div class="figure">
-  <img src="/assets/bg/blue-on-light.jpg">
-</div>
-</section>
+      <p><a href='/guides/math-json/'>Learn More<span class='ml-sm'><i
+              class="fas fa-chevron-right navigation"></i><span></a></p>
+    </div>
+    <div class="figure">
+      <img src="/assets/bg/math-json.png">
+    </div>
+  </section>
 
-<section id="mathjson" class="card">
-<div class="copy">
-  <h2><span class='eyebrow'>Visual Toolkit</span>Make Scientific Data Visible</h2>
-  <h3>Visual representations of data can help understanding. The Visual Toolkit helps plot data sets to reveal insights hidden in data.</h3>
-  <p><strong>Coming soon.</strong></p>
-</div>
-<div class="figure">
-  <img src="/assets/bg/blue-on-light.jpg">
-</div>
-</section>
+  <section id="mathjson" class="card">
+    <div class="copy">
+      <h2><span class='eyebrow'>Compute Engine</span>Turbo Formula Evaluator</h2>
+      <h3>The Compute Engine uses an optimizing compiler to quickly evaluate math formulas.</h3>
+      <p><strong>Coming soon.</strong></p>
+    </div>
+    <div class="figure">
+      <img src="/assets/bg/blue-on-light.jpg">
+    </div>
+  </section>
+
+  <section id="mathjson" class="card">
+    <div class="copy">
+      <h2><span class='eyebrow'>Visual Toolkit</span>Make Scientific Data Visible</h2>
+      <h3>Visual representations of data can help understanding. The Visual Toolkit helps plot data sets to reveal
+        insights hidden in data.</h3>
+      <p><strong>Coming soon.</strong></p>
+    </div>
+    <div class="figure">
+      <img src="/assets/bg/blue-on-light.jpg">
+    </div>
+  </section>
 
 
 </div>
