Updated contents, examples.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-layout: splash
+layout: wide # splash
 title: CortexJS
 read_time: false
 ---
@@ -10,7 +10,7 @@ read_time: false
   <p>Web Components for Scientific Computing</p>
 </section>
 
-<section id="mathfield" class="fullwidth bg-black">
+<section id="mathfield" class="fullwidth">
   <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
   <div class="figure">
     <video autoplay loop muted playinline class='max-w-lg'>
