--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -3,9 +3,11 @@ layout: wide
 title: MathLive
 permalink: /mathlive/
 read_time: false
+sidebar:
+    - nav: "mathlive"
 head:
   modules:
-    - ../assets/js/code-playground.js
+    - /assets/js/code-playground.js
   stylesheets:
     - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.css
   scripts:
@@ -16,38 +18,43 @@ head:
 <section class="hero-section">
   <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
   <h1>MathLive</h1>
-  <p>Math input made easy</p>
+  <p>A Web Component that Makes Math Input Easy</p>
 </section>
 
-<h2 class='font-size-2xl'>Try it now</h2>
 <section class='m-lg mb-xl w-full-lg max-w-2xl'>
   <code-playground layout="stack" class="m-lg w-full-lg">
     <script>
-        moduleMap = {
-            mathlive: "//unpkg.com/mathlive/dist/mathlive.mjs",
-        };
+      moduleMap = {
+        mathlive: "//unpkg.com/mathlive/dist/mathlive.mjs",
+      };
     </script>
-    <div slot="javascript">import MathLive from 'mathlive';
-MathLive.makeMathField(document.getElementById('mathfield'));
-</div>
-    <div slot="html">&lt;div id="mathfield"&gt;
-x=\frac{-b\pm \sqrt{b^2-4ac}}{2a}
-&lt;/div&gt;</div>
-</code-playground>
+    <div slot="html">&lt;script src="//unpkg.com/mathlive/dist/mathlive.min.js"&gt;&lt;/script&gt;
+&lt;math-field&gt;
+  x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}
+&lt;/math-field&gt;</div>
+  </code-playground>
 
   <div class='font-size-xl'>
     <h2 class="font-size-xl">View More Examples</h2>
     <ul>
-      <li><a href="/mathlive-examples-introduction">Introduction<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-interacting">Interact with a mathfield<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-customizing">Customize a mathfield<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-macros">Define custom Latex macros<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-shortcuts">Manage inline and keyboard shortcuts<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-speech">Control speech output<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-static">Display static math formulas<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
-      <li><a href="/mathlive-examples-virtual-keyboards">Define custom virtual keyboards<span class='ml-xs'><i class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/introduction">Introduction<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/interacting">Interact with a mathfield<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/customizing">Customize a mathfield<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/macros">Define custom Latex macros<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/shortcuts">Manage inline and keyboard shortcuts<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/speech">Control speech output<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/static">Display static math formulas<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
+      <li><a href="/mathlive/examples/virtual-keyboards">Define custom virtual keyboards<span class='ml-xs'><i
+              class="class='ml-xs fas fa-chevron-right navigation"></i></span></a></li>
     </ul>
-      
+
   </div>
 </section>
 
