--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@ title: CortexJS
 read_time: false
 ---
 
-<section class="hero-section">
-  <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
-  <h1>Cortex<em>JS</em></h1>
-  <p>Web Components for Scientific Computing</p>
+<section>
+  <!-- <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1"> -->
+  <div style='position:relative'>
+    <img src='assets/images/cortex-4.png' style='
+    width: 100vw;
+    height: 512px;
+    object-fit: cover;
+'>
+    <p
+      style='font-size: 48px;font-weight: 900;position: absolute;left: calc(50vw - 280px);bottom:.5em;margin:0;width: 280px;line-height: .92;color: white;'>
+      Web Components for Scientific Computing</p>
+  </div>
+  <!-- </a> -->
 </section>
 
 <section id="mathfield" class="fullwidth">
@@ -36,7 +45,7 @@ read_time: false
               class="fas fa-chevron-right navigation"></i><span></a></p>
     </div>
     <div class="figure">
-      <img src="/assets/bg/math-json.png">
+      <img src="/assets/MathJSON-1.png">
     </div>
   </section>
 
@@ -47,7 +56,7 @@ read_time: false
       <p><strong>Coming soon.</strong></p>
     </div>
     <div class="figure">
-      <img src="/assets/bg/blue-on-light.jpg">
+      <img src="/assets/Compute-Engine-2.png">
     </div>
   </section>
 
@@ -59,7 +68,7 @@ read_time: false
       <p><strong>Coming soon.</strong></p>
     </div>
     <div class="figure">
-      <img src="/assets/bg/blue-on-light.jpg">
+      <img src="/assets/visual-toolkit-1.png">
     </div>
   </section>
 
