feat: first pass of math-json/compute-engine doc

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -10,7 +10,21 @@ layout: wide
 
   <section class='cards col1 max-w-xl m-auto mb-xl'>
     <h2 class='font-size-2xl text-center'>MathLive Documentation</h2>
+
     <div class="card primary">
+      <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-rocket"></i>
+      </div>
+      <div class="copy">
+        <h3>Getting Started</h3>
+        <p>Everything you need to know to add a mathfield to your project</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
+
+    <div class="card">
       <a class="section-link" href="/docs/mathlive/" target="_self" rel="follow" aria-hidden="true"
         tabindex="-1">&nbsp;</a>
       <div class="ml-lg mr-lg">
@@ -23,17 +37,6 @@ layout: wide
       <i class="fa-3x fal fa-chevron-right navigation"></i>
     </div>
 
-    <div class="card">
-      <a class="section-link" href="/guides/mathfield-getting-started/" target="_self" rel="follow" aria-hidden="true"
-        tabindex="-1">&nbsp;</a>
-      <div class="ml-lg mr-lg">
-        <i class="fa-4x fad fa-rocket"></i>
-      </div>
-      <div class="copy">
-        <h3>Getting Started</h3>
-        <p>Everything you need to know to add a mathfield to your project</p>
-      </div>
-      <i class="fa-3x fal fa-chevron-right navigation"></i>
   </section>
 
   <section class='cards col1 max-w-xl m-auto mb-xl'>
@@ -42,7 +45,7 @@ layout: wide
       <a class="section-link" href="/guides/math-json/" target="_self" rel="follow" aria-hidden="true"
         tabindex="-1">&nbsp;</a>
       <div class="ml-lg mr-lg">
-        <i class="fa-4x fad fa-pencil"></i>
+        <i class="fa-4x fad fa-rocket"></i>
       </div>
       <div class="copy">
         <h3>MathJSON introduction</h3>
@@ -50,8 +53,51 @@ layout: wide
       </div>
       <i class="fa-3x fal fa-chevron-right navigation"></i>
     </div>
+
+    <div class="card">
+      <a class="section-link" href="/docs/mathjson/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-pencil"></i>
+      </div>
+      <div class="copy">
+        <h3>MathJSON SDK</h3>
+        <p>Reference documentation of the MathJSON SDK</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
+
   </section>
 
+  <section class='cards col1 max-w-xl m-auto mb-xl'>
+    <h2 class='font-size-2xl text-center'>Compute Engine Documentation</h2>
+    <div class="card primary">
+      <a class="section-link" href="/guides/compute-engine/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-rocket"></i>
+      </div>
+      <div class="copy">
+        <h3>Compute Engine introduction</h3>
+        <p>What the compute engine is all about...</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
+
+    <div class="card">
+      <a class="section-link" href="/docs/compute-engine/" target="_self" rel="follow" aria-hidden="true"
+        tabindex="-1">&nbsp;</a>
+      <div class="ml-lg mr-lg">
+        <i class="fa-4x fad fa-rocket"></i>
+      </div>
+      <div class="copy">
+        <h3>Compute Engine SDK</h3>
+        <p>Reference documentation for the Compute Engine SDK</p>
+      </div>
+      <i class="fa-3x fal fa-chevron-right navigation"></i>
+    </div>
+
+  </section>
 
 </section>
 
