--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ read_time: false
 <section>
   <!-- <a class="section-link" href="/mathlive/" target="_self" rel="follow" aria-hidden="true" tabindex="-1"> -->
   <div style='position:relative'>
-    <img src='assets/images/cortex-4.png' style='
+    <img src='assets/cortex-4.png' style='
     width: 100vw;
     height: 512px;
     object-fit: cover;
@@ -38,8 +38,8 @@ read_time: false
 <div class='cards col3'>
   <section id="mathjson" class="card">
     <div class="copy">
-      <h2><span class='eyebrow'>MathJSON</span>The Web Native Format for Formulas</h2>
-      <h3>A JSON schema to represent math formulas.</h3>
+      <h2><span class='eyebrow'>MathJSON</span>The Web Native Format for Math</h2>
+      <h3>A JSON schema to represent math expressions.</h3>
 
       <p><a href='/guides/math-json/'>Learn More<span class='ml-sm'><i
               class="fas fa-chevron-right navigation"></i><span></a></p>
@@ -51,9 +51,10 @@ read_time: false
 
   <section id="mathjson" class="card">
     <div class="copy">
-      <h2><span class='eyebrow'>Compute Engine</span>Turbo Formula Evaluator</h2>
-      <h3>The Compute Engine uses an optimizing compiler to quickly evaluate math formulas.</h3>
-      <p><strong>Coming soon.</strong></p>
+      <h2><span class='eyebrow'>Compute Engine</span>Turbo Math Evaluator</h2>
+      <h3>The Compute Engine uses an optimizing compiler to quickly evaluate math expressions.</h3>
+      <p><a href='guides/compute-engine/'>Learn More<span class='ml-sm'><i
+              class="fas fa-chevron-right navigation"></i><span></a></p>
     </div>
     <div class="figure">
       <img src="/assets/Compute-Engine-2.png">
