chore: deps + added cortex navigation

--- a/src/_pages/docs.html
+++ b/src/_pages/docs.html
@@ -42,8 +42,7 @@ layout: wide
   <section class='cards col1 max-w-xl m-auto mb-xl'>
     <h2 class='font-size-2xl text-center'>MathJSON Documentation</h2>
     <div class="card primary">
-      <a class="section-link" href="/guides/math-json/" target="_self" rel="follow" aria-hidden="true"
-        tabindex="-1">&nbsp;</a>
+      <a class="section-link" href="/math-json/" target="_self" rel="follow" aria-hidden="true" tabindex="-1">&nbsp;</a>
       <div class="ml-lg mr-lg">
         <i class="fa-4x fad fa-rocket"></i>
       </div>
@@ -72,7 +71,7 @@ layout: wide
   <section class='cards col1 max-w-xl m-auto mb-xl'>
     <h2 class='font-size-2xl text-center'>Compute Engine Documentation</h2>
     <div class="card primary">
-      <a class="section-link" href="/guides/compute-engine/" target="_self" rel="follow" aria-hidden="true"
+      <a class="section-link" href="/compute-engine/" target="_self" rel="follow" aria-hidden="true"
         tabindex="-1">&nbsp;</a>
       <div class="ml-lg mr-lg">
         <i class="fa-4x fad fa-rocket"></i>
