--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@ read_time: false
       <h2><span class='eyebrow'>MathJSON</span>The Web Native Format for Math</h2>
       <h3>A JSON schema to represent math expressions.</h3>
 
-      <p><a href='/guides/math-json/'>Learn More<span class='ml-sm'><i
-              class="fas fa-chevron-right navigation"></i><span></a></p>
+      <p><a href='/math-json/'>Learn More<span class='ml-sm'><i class="fas fa-chevron-right navigation"></i><span></a>
+      </p>
     </div>
     <div class="figure">
       <img src="/assets/MathJSON-1.png">
@@ -53,7 +53,7 @@ read_time: false
     <div class="copy">
       <h2><span class='eyebrow'>Compute Engine</span>Turbo Math Evaluator</h2>
       <h3>The Compute Engine uses an optimizing compiler to quickly evaluate math expressions.</h3>
-      <p><a href='guides/compute-engine/'>Learn More<span class='ml-sm'><i
+      <p><a href='/compute-engine/'>Learn More<span class='ml-sm'><i
               class="fas fa-chevron-right navigation"></i><span></a></p>
     </div>
     <div class="figure">
